# yew-game-of-life

./: Cargo.toml  index.html  index.scss
docs/: index.html  yew-gol-3d34eabf6ca19dfb_bg.wasm
src/: main.rs
