[package]
name = "yew-gol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
stylist = { version = "0.10.1", features = ["yew"] }
gloo = "0.6.1"
gloo-timers = "0.2.4"
web-sys = "0.3.58"
wasm-bindgen = "0.2.81"